<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/bg_pink_hard"
    android:id="@+id/relativeLayout"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/radio_text_view1"
        android:id="@+id/sampleText"
        android:textSize="60sp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:weightSum="3">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_text_view2"
                android:id="@+id/textView2"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/group1">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_text_radio1"
                android:id="@+id/gravityLeft"
                android:layout_gravity="center_horizontal"
                android:checked="true"
                android:textSize="@dimen/text_small"
                android:layout_marginBottom="10dp"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_text_radio2"
                android:id="@+id/gravityCenter"
                android:layout_gravity="center_horizontal"
                android:checked="false"
                android:textSize="@dimen/text_small"
                android:layout_marginBottom="10dp"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_text_radio3"
                android:id="@+id/gravityRight"
                android:layout_gravity="center_horizontal"
                android:checked="false"
                android:textSize="@dimen/text_small"
                android:layout_marginBottom="10dp"/>
        </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_text_view3"
                android:id="@+id/textView3"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/group2">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_text_radio4"
                    android:id="@+id/sizeSmall"
                    android:layout_gravity="center_horizontal"
                    android:checked="false"
                    android:textSize="@dimen/text_small"
                    android:layout_marginBottom="10dp" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_text_radio5"
                    android:id="@+id/sizeMedium"
                    android:layout_gravity="center_horizontal"
                    android:checked="false"
                    android:textSize="@dimen/text_small"
                    android:layout_marginBottom="10dp" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_text_radio6"
                    android:id="@+id/sizeBig"
                    android:layout_gravity="center_horizontal"
                    android:checked="true"
                    android:textSize="@dimen/text_small"
                    android:layout_marginBottom="10dp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_text_view4"
                android:id="@+id/textView4"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textSize="@dimen/text_normal"
                android:textStyle="bold"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/group3">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_text_radio7"
                    android:id="@+id/styleNormal"
                    android:layout_gravity="center_horizontal"
                    android:checked="true"
                    android:textSize="@dimen/text_small"
                    android:layout_marginBottom="10dp" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_text_radio8"
                    android:id="@+id/styleBold"
                    android:layout_gravity="center_horizontal"
                    android:checked="false"
                    android:textSize="@dimen/text_small"
                    android:layout_marginBottom="10dp" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_text_radio9"
                    android:id="@+id/styleItalic"
                    android:layout_gravity="center_horizontal"
                    android:checked="false"
                    android:textSize="@dimen/text_small"
                    android:layout_marginBottom="10dp" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:text="@string/radio_text_view5"
        android:textSize="@dimen/text_normal"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
