<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/bg_pink_hard"
    android:orientation="vertical"
    tools:context="com.family.allinone.DialogActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_text_btn1"
        android:id="@+id/showDialogBtn"
        android:textAllCaps="false"
        android:background="@color/btn_white_pure"
        android:textColor="@color/bg_pink_hard"
        android:textSize="@dimen/text_normal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_text_btn2"
        android:id="@+id/showChoiceBtn"
        android:textAllCaps="false"
        android:background="@color/btn_white_pure"
        android:textColor="@color/bg_pink_hard"
        android:textSize="@dimen/text_normal"
        android:layout_marginTop="10dp"
        android:clickable="false" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_text_btn3"
        android:id="@+id/showSingleBtn"
        android:textAllCaps="false"
        android:background="@color/btn_white_pure"
        android:textColor="@color/bg_pink_hard"
        android:textSize="@dimen/text_normal"
        android:layout_marginTop="10dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_text_btn4"
        android:id="@+id/showMultiBtn"
        android:textAllCaps="false"
        android:background="@color/btn_white_pure"
        android:textColor="@color/bg_pink_hard"
        android:textSize="@dimen/text_normal"
        android:layout_marginTop="10dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_text_btn5"
        android:id="@+id/showCustomBtn"
        android:textAllCaps="false"
        android:background="@color/btn_white_pure"
        android:textColor="@color/bg_pink_hard"
        android:textSize="@dimen/text_normal"
        android:layout_marginTop="10dp" />

    <TextView android:text="Dialog" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:textSize="@dimen/text_small"/>

</LinearLayout>
