<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/bg_pink_hard"
    tools:context="com.family.allinone.ToastActivity">

    <TextView android:text="@string/toast_text_view1" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text_normal"
        android:textColor="@color/btn_white_pure"
        android:id="@+id/textToast" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_text_btn1"
        android:id="@+id/shortToastBtn"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:background="@color/btn_white_pure"
        android:textColor="@color/bg_pink_hard"
        android:textSize="@dimen/text_normal"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_text_btn2"
        android:id="@+id/longToastBtn"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:background="@color/btn_white_pure"
        android:textColor="@color/bg_pink_hard"
        android:textSize="@dimen/text_normal"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/shortToastBtn"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_text_btn3"
        android:id="@+id/longerToastBtn"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:background="@color/btn_white_pure"
        android:textColor="@color/bg_pink_hard"
        android:textSize="@dimen/text_normal"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/longToastBtn"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_text_btn4"
        android:id="@+id/xmlToastBtn"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:background="@color/btn_white_pure"
        android:textColor="@color/bg_pink_hard"
        android:textSize="@dimen/text_normal"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/longerToastBtn" />

</RelativeLayout>
